samples/_failures_safe/1761336292_7bc7bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45f4abc4.c: In function ‘main’:
./samples/SAFE/__tmp_45f4abc4.c:162:9: error: expected declaration or statement at end of input
  162 |         free(tokens);
      |         ^~~~
./samples/SAFE/__tmp_45f4abc4.c:162:9: error: expected declaration or statement at end of input
